--- a/src/components/categories/categorie.module.css
+++ b/src/components/categories/categorie.module.css
@@ -1,4 +1,4 @@
-header{
+.entete{
     width: 80vw;
     margin: auto;
     display: flex;
@@ -10,11 +10,9 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .categorie{
-
     width: 80vw;
     border: 1px solid; 
     margin: 1rem;
