--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -10,13 +10,19 @@
 
 .form {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 15vw;
+    padding: 0;
 }
 
-.border{
+.form>* {
+    width: 100%;
+}
+
+.border {
     margin-bottom: 10px;
     border: 3px solid black;
     height: 3vh;
 }
-
