--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -1,4 +1,4 @@
-.center {
+.div {
     display: flex;
     flex-direction: column;
     width: 80vw;
@@ -23,6 +23,17 @@
 
 .border {
     margin-bottom: 10px;
-    border: 3px solid black;
+    border: 3px double lightskyblue;
     height: 3vh;
+}
+
+.center {
+    margin-top: 0;
+}
+
+.text {
+    background: linear-gradient(to right, #42d392 10%, #647eff 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* background: linear-gradient( 135deg, #42d392, #647eff ) */
 }
