--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -25,6 +25,7 @@
     margin-bottom: 10px;
     border: 3px double lightskyblue;
     height: 3vh;
+    background-color: lightcyan;
 }
 
 .center {
